--- a/midias.html
+++ b/midias.html
@@ -1,149 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Galeria de Promoções • Admin</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Mídias de Promoção • Admin</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 :root{
-  --bg:#0b0b0c; --card:#111113; --text:#fff; --muted:#9ca3af;
-  --gold:#d4af37; --border:#1f1f22; --radius:18px; --shadow:0 20px 60px rgba(0,0,0,.6);
+  --bg:#0b0b0c; --card:#0f0f12; --text:#fff; --muted:#9ca3af;
+  --gold:#d4af37; --border:#1f1f22; --radius:16px;
 }
 *{box-sizing:border-box}
-body{margin:0;background:linear-gradient(180deg,#000,#0b0b0c);color:#fff;font-family:Inter}
-.header{position:sticky;top:0;z-index:10;padding:16px;background:rgba(0,0,0,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
-.header h1{margin:0;font-size:18px;font-weight:900;letter-spacing:.5px}
-.wrap{max-width:1100px;margin:0 auto;padding:16px}
+body{margin:0;background:#000;color:#fff;font-family:Inter}
+.header{position:sticky;top:0;padding:14px 18px;background:#000;border-bottom:1px solid var(--border)}
+.header h1{margin:0;font-size:18px;font-weight:900}
+.container{max-width:1100px;margin:0 auto;padding:16px;display:grid;gap:16px}
 
-.uploader{
+.form{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:18px;
+  padding:16px;
   display:grid;
-  grid-template-columns:1fr 110px 160px 110px 110px auto;
-  gap:8px; margin-bottom:14px;
+  gap:12px;
 }
-.uploader input,.uploader select{
+.form h2{margin:0 0 8px;font-size:14px;letter-spacing:.4px;color:var(--gold)}
+
+.row{display:grid;grid-template-columns:1fr 120px;gap:10px}
+label{font-size:12px;color:var(--muted)}
+input,select,button{
   height:46px;border-radius:12px;border:1px solid var(--border);
-  background:#0f0f12;color:#fff;padding:0 12px
+  background:#0b0b0c;color:#fff;padding:0 12px
 }
-.uploader select[multiple]{height:46px}
-.uploader button{
-  height:46px;border-radius:12px;border:1px solid var(--gold);
-  background:#000;color:var(--gold);font-weight:900;cursor:pointer
+button.primary{border-color:var(--gold);color:var(--gold);font-weight:800;cursor:pointer}
+
+.days{display:flex;gap:8px;flex-wrap:wrap}
+.day{
+  padding:8px 12px;border:1px solid var(--border);border-radius:999px;
+  font-size:12px;cursor:pointer;color:#fff
 }
+.day.active{border-color:var(--gold);color:var(--gold)}
 
 .preview{
-  grid-column:1 / -1;
-  display:flex; gap:10px; align-items:center;
-  padding:10px; border:1px dashed var(--border); border-radius:12px;
+  height:160px;border-radius:14px;border:1px dashed var(--border);
+  display:grid;place-items:center;overflow:hidden;background:#000
 }
-.preview img,.preview video{width:120px;height:80px;object-fit:cover;border-radius:10px;background:#000}
+.preview img,.preview video{width:100%;height:100%;object-fit:cover}
 
-.progress{
-  height:6px; background:#111; border-radius:999px; overflow:hidden; margin-top:6px;
-}
-.progress > div{
-  height:100%; width:0%; background:linear-gradient(90deg,#d4af37,#f5d76e);
-  transition:width .2s ease;
-}
-
-.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:12px}
-.card{background:#0f0f12;border:1px solid var(--border);border-radius:18px;overflow:hidden}
-.thumb{width:100%;aspect-ratio:1/1;object-fit:cover;background:#000}
-.card video.thumb{object-fit:cover}
-.meta{display:flex;justify-content:space-between;align-items:center;padding:10px}
-.badge{font-size:10px;font-weight:900;border:1px solid var(--border);padding:4px 8px;border-radius:999px}
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px}
+.card{background:#0f0f12;border:1px solid var(--border);border-radius:16px;overflow:hidden}
+.card img,.card video{width:100%;aspect-ratio:1/1;object-fit:cover}
+.card .meta{display:flex;justify-content:space-between;align-items:center;padding:10px}
+.badge{font-size:10px;border:1px solid var(--border);padding:4px 8px;border-radius:999px}
 .badge.on{border-color:var(--gold);color:var(--gold)}
 .actions{display:flex;gap:6px}
-.actions button{
-  background:transparent;border:1px solid var(--border);color:#fff;
-  border-radius:10px;padding:6px 10px;cursor:pointer
-}
-.actions button.danger{border-color:#dc2626;color:#dc2626}
-.actions button:hover{border-color:var(--gold);color:var(--gold)}
-.footer-note{opacity:.6;font-size:12px;margin-top:10px}
+.actions button{padding:6px 10px;font-size:12px}
+.danger{border-color:#dc2626;color:#dc2626}
 </style>
 </head>
 <body>
 
-<div class="header">
-  <h1>🖼️ Galeria de Promoções (Banners & Vídeos)</h1>
-</div>
+<div class="header"><h1>📺 Mídias de Promoção</h1></div>
 
-<div class="wrap">
-  <div class="uploader">
-    <input id="file" type="file" accept="image/*,video/*" />
-    <select id="tipo">
-      <option value="IMG">IMG</option>
-      <option value="VIDEO">VIDEO</option>
-    </select>
+<div class="container">
 
-    <select id="dias" multiple>
-      <option value="1">Seg</option>
-      <option value="2">Ter</option>
-      <option value="3">Qua</option>
-      <option value="4">Qui</option>
-      <option value="5">Sex</option>
-      <option value="6">Sáb</option>
-      <option value="7">Dom</option>
-    </select>
+  <div class="form">
+    <h2>NOVA PROMOÇÃO</h2>
 
-    <input id="hora_inicio" type="time" value="00:00" />
-    <input id="hora_fim" type="time" value="23:59" />
+    <label>Arquivo (imagem ou vídeo)</label>
+    <input id="file" type="file" accept="image/*,video/*">
 
-    <button onclick="addPromo()">Upload & Salvar</button>
+    <div class="row">
+      <div>
+        <label>Tipo</label>
+        <select id="tipo">
+          <option value="IMG">Imagem</option>
+          <option value="VIDEO">Vídeo</option>
+        </select>
+      </div>
+      <div>
+        <label>Horário</label>
+        <input id="hora_inicio" type="time" value="00:00">
+        <input id="hora_fim" type="time" value="23:59">
+      </div>
+    </div>
 
-    <div class="preview" id="preview" style="display:none"></div>
-    <div class="progress" id="progress" style="display:none"><div></div></div>
+    <label>Dias da semana</label>
+    <div class="days" id="dias">
+      <div class="day" data-v="1">Seg</div>
+      <div class="day" data-v="2">Ter</div>
+      <div class="day" data-v="3">Qua</div>
+      <div class="day" data-v="4">Qui</div>
+      <div class="day" data-v="5">Sex</div>
+      <div class="day" data-v="6">Sáb</div>
+      <div class="day" data-v="7">Dom</div>
+    </div>
+
+    <div class="preview" id="preview">Preview</div>
+
+    <button class="primary" onclick="addPromo()">📤 Upload & Salvar</button>
   </div>
 
-  <div id="grid" class="grid"></div>
-  <div class="footer-note">
-    * Upload vai para o bucket <b>promocoes</b> do Supabase. Exclusão remove do Storage também.
-  </div>
+  <div class="grid" id="grid"></div>
+
 </div>
 
 <script>
-const sb = supabase.createClient(
-  "https://dxkszikemntfusfyrzos.supabase.co",
-  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
-);
-
-const grid = document.getElementById("grid");
+const sb = supabase.createClient("https://dxkszikemntfusfyrzos.supabase.co","sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed");
 const fileInput = document.getElementById("file");
 const tipoInput = document.getElementById("tipo");
-const diasInput = document.getElementById("dias");
 const horaInicioInput = document.getElementById("hora_inicio");
 const horaFimInput = document.getElementById("hora_fim");
 const preview = document.getElementById("preview");
-const progressBar = document.getElementById("progress");
-const progressFill = progressBar.querySelector("div");
+const grid = document.getElementById("grid");
+
+let diasSel = [];
+
+document.querySelectorAll(".day").forEach(d=>{
+  d.onclick = ()=>{
+    d.classList.toggle("active");
+    const v = Number(d.dataset.v);
+    diasSel.includes(v) ? diasSel = diasSel.filter(x=>x!==v) : diasSel.push(v);
+  };
+});
 
 fileInput.onchange = () => {
-  const file = fileInput.files[0];
-  if(!file) return;
-  preview.style.display = "flex";
-  preview.innerHTML = file.type.startsWith("video")
-    ? `<video src="${URL.createObjectURL(file)}" muted autoplay loop></video>`
-    : `<img src="${URL.createObjectURL(file)}">`;
+  const f = fileInput.files[0];
+  if(!f) return;
+  preview.innerHTML = f.type.startsWith("video")
+    ? `<video src="${URL.createObjectURL(f)}" autoplay muted loop></video>`
+    : `<img src="${URL.createObjectURL(f)}">`;
 };
 
 async function load(){
-  const { data, error } = await sb.from("promocoes").select("*").order("created_at", { ascending:false });
-  if(error){ console.error(error); return; }
-
-  grid.innerHTML = (data||[]).map(p => `
+  const { data } = await sb.from("promocoes").select("*").order("created_at",{ascending:false});
+  grid.innerHTML = (data||[]).map(p=>`
     <div class="card">
-      ${p.tipo === "VIDEO"
-        ? `<video class="thumb" src="${p.url}" muted autoplay loop playsinline></video>`
-        : `<img class="thumb" src="${p.url}">`
-      }
+      ${p.tipo==="VIDEO" ? `<video src="${p.url}" muted autoplay loop></video>` : `<img src="${p.url}">`}
       <div class="meta">
-        <span class="badge ${p.ativo?'on':''}">${p.tipo} • ${p.ativo?'ATIVO':'OFF'}</span>
+        <span class="badge ${p.ativo?'on':''}">${p.tipo} • ${p.ativo?'ON':'OFF'}</span>
         <div class="actions">
-          <button onclick="toggle('${p.id}', ${p.ativo})">${p.ativo?'Desativar':'Ativar'}</button>
-          <button class="danger" onclick="delPromo('${p.id}', '${p.url}')">Excluir</button>
+          <button onclick="toggle('${p.id}',${p.ativo})">${p.ativo?'Off':'On'}</button>
+          <button class="danger" onclick="delPromo('${p.id}','${p.url}')">Excluir</button>
         </div>
       </div>
     </div>
@@ -151,66 +151,46 @@ async function load(){
 }
 
 async function addPromo(){
-  const file = fileInput.files[0];
-  if(!file) return alert("Selecione um arquivo");
+  const f = fileInput.files[0];
+  if(!f) return alert("Selecione um arquivo");
+  if(!diasSel.length) return alert("Selecione ao menos um dia");
 
-  const dias = Array.from(diasInput.selectedOptions).map(o => Number(o.value));
-  if(!dias.length) return alert("Selecione os dias");
-
-  const hora_inicio = horaInicioInput.value || "00:00";
-  const hora_fim = horaFimInput.value || "23:59";
-  const tipo = tipoInput.value;
-
-  progressBar.style.display = "block";
-  progressFill.style.width = "0%";
-
-  const ext = file.name.split(".").pop();
+  const ext = f.name.split(".").pop();
   const path = `promocoes/${Date.now()}_${Math.random().toString(36).slice(2)}.${ext}`;
+  await sb.storage.from("promocoes").upload(path, f);
 
-  const { error: upErr } = await sb.storage.from("promocoes").upload(path, file, {
-    cacheControl: "3600",
-    upsert: false
+  const { data } = sb.storage.from("promocoes").getPublicUrl(path);
+
+  await sb.from("promocoes").insert({
+    url: data.publicUrl,
+    tipo: tipoInput.value,
+    dias_semana: diasSel,
+    hora_inicio: horaInicioInput.value,
+    hora_fim: horaFimInput.value,
+    ativo:true
   });
-
-  if(upErr){ console.error(upErr); alert("Erro no upload"); return; }
-
-  const { data: urlData } = sb.storage.from("promocoes").getPublicUrl(path);
-  const url = urlData.publicUrl;
-
-  const { error } = await sb.from("promocoes").insert({
-    url, tipo, ativo:true, dias_semana:dias, hora_inicio, hora_fim
-  });
-
-  if(error){ console.error(error); alert("Erro ao salvar no banco"); return; }
 
   fileInput.value = "";
-  preview.style.display = "none";
-  progressBar.style.display = "none";
+  preview.innerHTML = "Preview";
+  diasSel = [];
+  document.querySelectorAll(".day").forEach(d=>d.classList.remove("active"));
   load();
 }
 
 async function toggle(id, ativo){
-  const { error } = await sb.from("promocoes").update({ ativo: !ativo }).eq("id", id);
-  if(error){ alert("Erro ao atualizar"); console.error(error); return; }
+  await sb.from("promocoes").update({ativo:!ativo}).eq("id",id);
   load();
 }
 
 async function delPromo(id, url){
-  if(!confirm("Excluir esta mídia? Isso apaga do Storage também.")) return;
-
+  if(!confirm("Excluir mídia?")) return;
   const path = url.split("/storage/v1/object/public/promocoes/")[1];
-  if(path){
-    await sb.storage.from("promocoes").remove([path]);
-  }
-
-  const { error } = await sb.from("promocoes").delete().eq("id", id);
-  if(error){ alert("Erro ao excluir"); console.error(error); return; }
-
+  if(path) await sb.storage.from("promocoes").remove([path]);
+  await sb.from("promocoes").delete().eq("id",id);
   load();
 }
 
 load();
 </script>
-
 </body>
 </html>
