--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ html, body {
 <!-- PROMOÇÕES DO DIA -->
 <div id="promoWrap" class="promo-wrap" style="display:none">
   <div class="promo-card">
-    <div class="promo-title">🔥 Promoções do Dia</div>
+    <div class="promo-title">Destaques do dia</div>
 
     <div class="promo-slider" id="promoSlider"></div>
 
