--- a/dashboard.html
+++ b/dashboard.html
@@ -285,17 +285,19 @@ function openPage(page, el){
   document.getElementById("frame").src = page;
   document.querySelectorAll(".icon").forEach(i=>i.classList.remove("active"));
   el.classList.add("active");
-  const titles = {
-    "home.html": "CB SYSTEMS® - Dashboard",
-    "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
-    "ingredientes.html": "CB SYSTEMS® - Ingredientes",
-    "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
-    "config.html": "CB SYSTEMS® - Configurações"
-    "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
-
-  };
+const titles = {
+  "home.html": "CB SYSTEMS® - Dashboard",
+  "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
+  "ingredientes.html": "CB SYSTEMS® - Ingredientes",
+  "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
+  "config.html": "CB SYSTEMS® - Configurações",
+  "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
+};
   document.getElementById("pageTitle").innerText = titles[page] || "CB SYSTEMS®";
 }
+
+window.openLogin = openLogin;
+window.closeLogin = closeLogin;
 </script>
 
 </body>
