--- a/dashboard.html
+++ b/dashboard.html
@@ -285,18 +285,31 @@ function showApp(){
 }
 
 function openPage(page, el){
+  localStorage.setItem("cb_page", page);
   document.getElementById("frame").src = page;
   document.querySelectorAll(".icon").forEach(i=>i.classList.remove("active"));
   el.classList.add("active");
-const titles = {
-  "home.html": "CB SYSTEMS® - Dashboard",
-  "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
-  "ingredientes.html": "CB SYSTEMS® - Ingredientes",
-  "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
-  "config.html": "CB SYSTEMS® - Configurações",
-  "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
-};
+
+  const titles = {
+    "home.html": "CB SYSTEMS® - Dashboard",
+    "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
+    "ingredientes.html": "CB SYSTEMS® - Ingredientes",
+    "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
+    "config.html": "CB SYSTEMS® - Configurações",
+    "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
+  };
   document.getElementById("pageTitle").innerText = titles[page] || "CB SYSTEMS®";
+}
+
+async function check(){
+  const { data } = await sb.auth.getSession();
+  if(data.session){
+    showApp();
+    const page = localStorage.getItem("cb_page") || "home.html";
+    const icon = [...document.querySelectorAll(".icon")]
+      .find(i => i.getAttribute("onclick")?.includes(page)) || document.querySelector(".icon");
+    openPage(page, icon);
+  }
 }
 
 window.openLogin = openLogin;
