--- a/dashboard.html
+++ b/dashboard.html
@@ -156,6 +156,30 @@ html,body{
 .glyph.settings::after{content:"";position:absolute;inset:6px;border:2px solid #00a6a0;border-radius:50%}
 .glyph.box::before{content:"";position:absolute;inset:0;border:3px solid #00a6a0;border-radius:4px}
 .glyph.box::after{content:"";position:absolute;inset:6px;border-top:3px solid #00a6a0}
+.glyph.media{
+  position:relative;
+}
+.glyph.media::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:6px;
+  border:3px solid #00a6a0;
+}
+.glyph.media::after{
+  content:"";
+  position:absolute;
+  left:6px; right:6px; bottom:6px; height:3px;
+  background:#00a6a0;
+  box-shadow:
+    0 -6px 0 #00a6a0,
+    0 -12px 0 #00a6a0;
+}
+
+
+
+
+  
 .main{display:flex;flex-direction:column;height:100%}
 .header{
   height:68px;
@@ -230,8 +254,8 @@ iframe{flex:1;width:100%;border:0;background:#fff}
     <div class="icon" onclick="openPage('fichatecnica.html',this)"><span class="glyph doc"></span></div>
     <div class="icon" onclick="openPage('ingredientes.html',this)"><span class="glyph box"></span></div>
     <div class="icon" onclick="openPage('analiseficha.html',this)"><span class="glyph chart"></span></div>
-    <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
-    <div class="icon" onclick="openPage('midias.html',this)"><span class="glyph settings"></span></div>
+   <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
+<div class="icon" onclick="openPage('midias.html',this)"><span class="glyph media"></span></div>
 
   </aside>
 
