--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@ body::-webkit-scrollbar{width:0;height:0}
 .cat{padding:10px 14px;border-radius:999px;border:1px solid var(--border);background:#0f0f12;color:#fff;font-weight:800;font-size:12px;cursor:pointer}
 .cat.active,.cat:hover{border-color:var(--gold);color:var(--gold)}
 .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px;padding:12px 12px 80px}
-.card{background:#0f0f12;border:1px solid var(--border);border-radius:18px;overflow:hidden;cursor:pointer}
-.thumb{width:100%;aspect-ratio:1/1;object-fit:cover}
-.body{padding:12px}
+.card{
+  background:#0f0f12;
+  border:1px solid var(--border);
+  border-radius:18px;
+  overflow:hidden;
+  cursor:pointer;
+  min-height: 340px;   /* 👈 AQUI você aumenta a altura do card */
+}
+.thumb{
+  width:100%;
+  height: 220px;      /* 👈 AQUI você controla a altura da imagem */
+  object-fit:cover;
+}.body{padding:12px}
 .name{font-weight:900;font-size:14px}
 .desc{font-size:12px;color:#9ca3af;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 .price{margin-top:6px;font-weight:900;color:var(--gold)}
