--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@ body::-webkit-scrollbar{width:0;height:0}
   width:100%;
   height: 240px;      /* 👈 AQUI você controla a altura da imagem */
   object-fit:cover;
-}.body{padding:12px}
+}
+/* ===== AJUSTE DE ALTURA PARA TABLET ===== */
+@media (min-width: 700px){
+  .thumb{ height: 280px; }     /* altura da imagem no tablet */
+  .card{ min-height: 420px; } /* altura do card no tablet */
+}  
+  
+.body{padding:12px}
 .name{font-weight:900;font-size:14px}
 .desc{font-size:12px;color:#9ca3af;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 .price{margin-top:6px;font-weight:900;color:var(--gold)}
