--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@ body::-webkit-scrollbar{width:0;height:0}
 }
 .thumb{
   width:100%;
-  height: 240px;      /* 👈 AQUI você controla a altura da imagem */
-  object-fit:cover;
+  height: 340px;      /* 👈 aumenta para caber a garrafa inteira */
+  object-fit:contain; /* 👈 não corta a imagem */
+  background:#000;    /* fundo preto para não ficar feio */
 }
 /* ===== AJUSTE DE ALTURA PARA TABLET ===== */
 @media (min-width: 700px){
-  .thumb{ height: 280px; }     /* altura da imagem no tablet */
-  .card{ min-height: 420px; } /* altura do card no tablet */
-}  
-  
+  .thumb{ height: 420px; }     /* 👈 imagem maior no tablet */
+  .card{ min-height: 520px; } /* 👈 card acompanha a imagem */
+}
 .body{padding:12px}
 .name{font-weight:900;font-size:14px}
 .desc{font-size:12px;color:#9ca3af;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
