--- a/midias.html
+++ b/midias.html
@@ -76,7 +76,7 @@ button.primary:hover{box-shadow:0 0 0 2px rgba(212,175,55,.15) inset}
 </head>
 <body>
 
-<div class="header"><h1>📺 Mídias de Promoção</h1></div>
+<div class="header"><h1>Mídias do cardápio</h1></div>
 
 <div class="container">
 
