--- a/analiseficha.html
+++ b/analiseficha.html
@@ -192,7 +192,7 @@ body.modal-open{
 .modal-box{
   background:#fff;
   width:96vw;
-  max-width:1200px;
+  max-width:1440px; /* antes: 1200px */
   max-height:92vh;
   border-radius:26px;
   overflow:hidden;
@@ -213,7 +213,7 @@ body.modal-open{
 ========================================================= */
 .modal-header{
   display:grid;
-  grid-template-columns:340px 1fr;
+  grid-template-columns:42% 58%; /* antes: 340px 1fr */
   gap:22px;
   padding:22px 26px;
   border-bottom:1px solid var(--border);
@@ -225,14 +225,15 @@ body.modal-open{
 .modal-left{
   border-radius:22px;
   overflow:hidden;
-  box-shadow:0 20px 50px rgba(0,0,0,.28);
+  box-shadow:0 30px 80px rgba(0,0,0,.45);
   background:#000;
+  height:100%;
+  min-height:420px;
 }
 
 .modal-img{
   width:100%;
   height:100%;
-  min-height:220px;
   object-fit:cover;
   display:block;
 }
