--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -327,6 +327,7 @@ button:disabled{opacity:.6;cursor:not-allowed}
       <option>ENTRADA</option>
       <option>SOBREMESA</option>
       <option>DRINK</option>
+      <option>DRINK SEM ALCOOL</option>
       <option>SUCO</option>
       <option>SUSHI</option>
       <option>ACOMPANHAMENTO</option>
