--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -282,51 +282,7 @@ button:disabled{opacity:.6;cursor:not-allowed}
   margin-top:0;
 }
 
-/* EDITAR NOME DO PRATO (INLINE) */
-.edit-wrap{
-  display:flex;
-  align-items:center;
-  gap:10px;
-}
-.edit-title{
-  display:flex;
-  align-items:center;
-  gap:8px;
-}
-.edit-btn{
-  background:transparent;
-  border:1px solid var(--border);
-  color:#9ff3ea;
-  border-radius:10px;
-  padding:6px 8px;
-  cursor:pointer;
-  font-weight:900;
-}
-.edit-btn:hover{
-  border-color:var(--primary);
-  box-shadow:0 0 0 3px var(--ring);
-}
-.edit-input{
-  background:#020617;
-  color:var(--text);
-  border:1px solid var(--border);
-  border-radius:12px;
-  padding:10px 12px;
-  font-weight:900;
-  letter-spacing:.04em;
-}
-.edit-actions{
-  display:flex;
-  gap:6px;
-}
-.edit-save{
-  background:linear-gradient(135deg,#22c55e,#16a34a);
-  color:#042f2e;
-}
-.edit-cancel{
-  background:linear-gradient(135deg,#ef4444,#b91c1c);
-  color:#fff;
-}
+
 
 
   
@@ -359,22 +315,8 @@ button:disabled{opacity:.6;cursor:not-allowed}
 <div class="form-grid">
 
   <div class="field">
-<label>NOME DO PRATO</label>
-
-<div id="nomeWrap" class="edit-wrap">
-  <div id="nomeView" class="edit-title">
-    <strong id="nomeTexto">—</strong>
-    <button class="edit-btn" title="Editar nome" onclick="editarNomeInline()">✏️</button>
-  </div>
-
-  <div id="nomeEdit" class="hidden" style="display:flex;gap:8px;align-items:center">
-    <input id="nomeInputInline" class="edit-input" />
-    <div class="edit-actions">
-      <button class="edit-btn edit-save" onclick="salvarNomeInline()">✔</button>
-      <button class="edit-btn edit-cancel" onclick="cancelarNomeInline()">✖</button>
-    </div>
-  </div>
-</div>
+    <label>NOME DO PRATO</label>
+    <input id="nomePrato">
   </div>
 
   <div class="field">
@@ -959,55 +901,7 @@ function removerIngrediente(index, btn){
     render();
   }, 350);
 }
-// ====== EDIÇÃO INLINE DO NOME ======
-function editarNomeInline(){
-  const view = document.getElementById("nomeView");
-  const edit = document.getElementById("nomeEdit");
-  const input = document.getElementById("nomeInputInline");
-  const texto = document.getElementById("nomeTexto");
 
-  input.value = (texto.textContent || "").trim();
-  view.classList.add("hidden");
-  edit.classList.remove("hidden");
-  setTimeout(()=>input.focus(), 50);
-}
-
-function cancelarNomeInline(){
-  document.getElementById("nomeEdit").classList.add("hidden");
-  document.getElementById("nomeView").classList.remove("hidden");
-}
-
-async function salvarNomeInline(){
-  const input = document.getElementById("nomeInputInline");
-  const novoNome = (input.value || "").trim().toUpperCase();
-  if (!novoNome) return toast("NOME INVÁLIDO");
-
-  // Se estiver criando do zero (sem id), apenas reflete no input principal
-  if (!window.fichaSelecionada?.prato?.id) {
-    nomePrato.value = novoNome;
-    document.getElementById("nomeTexto").textContent = novoNome;
-    cancelarNomeInline();
-    return;
-  }
-
-  // Atualiza no Supabase
-  show();
-  const { error } = await sb
-    .from("buffet")
-    .update({ nome: novoNome })
-    .eq("id", fichaSelecionada.prato.id);
-  hide();
-
-  if (error) return toast("Erro ao salvar nome");
-
-  // Atualiza estado local
-  fichaSelecionada.prato.nome = novoNome;
-  document.getElementById("nomeTexto").textContent = novoNome;
-  nomePrato.value = novoNome; // mantém compatibilidade com salvar()
-
-  cancelarNomeInline();
-  toast("NOME ATUALIZADO");
-}
 
 
 
