--- a/analiseficha.html
+++ b/analiseficha.html
@@ -213,7 +213,7 @@ body.modal-open{
 ========================================================= */
 .modal-header{
   display:grid;
-  grid-template-columns:42% 58%; /* antes: 340px 1fr */
+  grid-template-columns:34% 66%;
   gap:22px;
   padding:22px 26px;
   border-bottom:1px solid var(--border);
@@ -228,13 +228,15 @@ body.modal-open{
   box-shadow:0 30px 80px rgba(0,0,0,.45);
   background:#000;
   height:100%;
-  min-height:420px;
+  min-height:260px;     /* 👈 diminui */
+  max-height:360px;     /* 👈 trava a altura */
 }
 
 .modal-img{
   width:100%;
   height:100%;
-  object-fit:cover;
+  object-fit:contain;   /* 👈 mostra inteira (se preferir menos corte) */
+  background:#000;     /* 👈 fundo elegante se sobrar borda */
   display:block;
 }
 
