--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -326,6 +326,7 @@ button:disabled{opacity:.6;cursor:not-allowed}
       <option>PRATO PRINCIPAL</option>
       <option>ENTRADA</option>
       <option>SOBREMESA</option>
+      <option>SALADA</option>
       <option>DRINK</option>
       <option>DRINK SEM ALCOOL</option>
       <option>SUCO</option>
