--- a/analiseficha.html
+++ b/analiseficha.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>CMV • Fichas Técnicas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
@@ -549,6 +550,7 @@ let pratos = [];
 let ingredientesBase = [];
 let impostosCache = [];
 let pratoAtual = null;
+let filtroTipoSelecionado = "";
 
 
 /* =====================================================
@@ -1428,49 +1430,48 @@ async function salvarIngrediente(){
   const qtd = Number(ingQtd.value||0);
   if(!prodId || qtd<=0) return;
 
-const prod = ingredientesBase.find(p => p.id === prodId);
-const custoUnit = Number(prod.valor);
+  const prod = ingredientesBase.find(p => p.id === prodId);
+  const custoUnit = Number(prod.valor);
 
-await sb.from("buffet_itens").insert({
-  buffet_id: pratoAtual.id,
-  produto_id: prod.id,
-  nome: prod.nome,
-  quantidade: qtd,
-  unidade_uso: prod.unidade_medida,
-  custo_unitario: custoUnit,
-  custo_calculado: custoUnit * qtd
-});
+  await sb.from("buffet_itens").insert({
+    buffet_id: pratoAtual.id,
+    produto_id: prod.id,
+    nome: prod.nome,
+    quantidade: qtd,
+    unidade_uso: prod.unidade_medida,
+    custo_unitario: custoUnit,
+    custo_calculado: custoUnit * qtd
+  });
 
-// 🔁 atualiza cache e reabre com dados novos
-await carregarCMVCache();
+  await carregarCMVCache();
 
-const { data: pratoNovo } = await sb
-  .from("buffet")
-  .select("*")
-  .eq("id", pratoAtual.id)
-  .single();
+  const { data: pratoNovo } = await sb
+    .from("buffet")
+    .select("*")
+    .eq("id", pratoAtual.id)
+    .single();
 
-abrirModal(pratoNovo);
+  abrirModal(pratoNovo);
+}
 
 async function excluirIngrediente(itemId){
   if(!confirm("Excluir este ingrediente?")) return;
 
-await sb
-  .from("buffet_itens")
-  .delete()
-  .eq("id", itemId);
+  await sb
+    .from("buffet_itens")
+    .delete()
+    .eq("id", itemId);
 
-// 🔁 atualiza cache e reabre com dados novos
-await carregarCMVCache();
+  await carregarCMVCache();
 
-const { data: pratoNovo } = await sb
-  .from("buffet")
-  .select("*")
-  .eq("id", pratoAtual.id)
-  .single();
+  const { data: pratoNovo } = await sb
+    .from("buffet")
+    .select("*")
+    .eq("id", pratoAtual.id)
+    .single();
 
-abrirModal(pratoNovo);
-
+  abrirModal(pratoNovo);
+}
 
 async function salvarImposto(){
   const desc = impDesc.value.trim();
@@ -1495,7 +1496,6 @@ async function excluirImposto(id){
   await sb.from("impostos").delete().eq("id",id);
   abrirModal(pratoAtual);
 }
-
 /* =====================================================
    AUTO UNIDADE
 ===================================================== */
